{
  "version": 4,
  "terraform_version": "1.2.5",
  "serial": 1062,
  "lineage": "fc7dbe88-93f1-aca7-ae73-d49e9c97a6b7",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/5ccf6afd-ae4a-4305-8393-5b1b7b150dd6/resourceGroups/kubernetes/providers/Microsoft.Network/networkInterfaces/MasterNIC",
            "internal_domain_name_suffix": "eipch5ripkfufautqteuqutbyg.cwx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "config1",
                "primary": true,
                "private_ip_address": "10.0.0.10",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/5ccf6afd-ae4a-4305-8393-5b1b7b150dd6/resourceGroups/kubernetes/providers/Microsoft.Network/publicIPAddresses/vmip1",
                "subnet_id": "/subscriptions/5ccf6afd-ae4a-4305-8393-5b1b7b150dd6/resourceGroups/kubernetes/providers/Microsoft.Network/virtualNetworks/redkubernetes/subnets/subredkubernetes"
              }
            ],
            "location": "ukwest",
            "name": "MasterNIC",
            "private_ip_address": "10.0.0.10",
            "private_ip_addresses": [
              "10.0.0.10"
            ],
            "resource_group_name": "kubernetes",
            "tags": {
              "environment": "CasoPractico2"
            }
          },
          "dependencies": [
            "azurerm_public_ip.publicIP1",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/5ccf6afd-ae4a-4305-8393-5b1b7b150dd6/resourceGroups/kubernetes/providers/Microsoft.Network/networkInterfaces/WorkerNIC",
            "internal_domain_name_suffix": "eipch5ripkfufautqteuqutbyg.cwx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "config2",
                "primary": true,
                "private_ip_address": "10.0.0.11",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/5ccf6afd-ae4a-4305-8393-5b1b7b150dd6/resourceGroups/kubernetes/providers/Microsoft.Network/publicIPAddresses/vmip2",
                "subnet_id": "/subscriptions/5ccf6afd-ae4a-4305-8393-5b1b7b150dd6/resourceGroups/kubernetes/providers/Microsoft.Network/virtualNetworks/redkubernetes/subnets/subredkubernetes"
              }
            ],
            "location": "ukwest",
            "name": "WorkerNIC",
            "private_ip_address": "10.0.0.11",
            "private_ip_addresses": [
              "10.0.0.11"
            ],
            "resource_group_name": "kubernetes",
            "tags": {
              "environment": "CasoPractico2"
            }
          },
          "dependencies": [
            "azurerm_public_ip.publicIP2",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/5ccf6afd-ae4a-4305-8393-5b1b7b150dd6/resourceGroups/kubernetes/providers/Microsoft.Network/networkInterfaces/NFSNIC",
            "internal_domain_name_suffix": "eipch5ripkfufautqteuqutbyg.cwx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "config3",
                "primary": true,
                "private_ip_address": "10.0.0.12",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/5ccf6afd-ae4a-4305-8393-5b1b7b150dd6/resourceGroups/kubernetes/providers/Microsoft.Network/publicIPAddresses/vmip3",
                "subnet_id": "/subscriptions/5ccf6afd-ae4a-4305-8393-5b1b7b150dd6/resourceGroups/kubernetes/providers/Microsoft.Network/virtualNetworks/redkubernetes/subnets/subredkubernetes"
              }
            ],
            "location": "ukwest",
            "name": "NFSNIC",
            "private_ip_address": "10.0.0.12",
            "private_ip_addresses": [
              "10.0.0.12"
            ],
            "resource_group_name": "kubernetes",
            "tags": {
              "environment": "CasoPractico2"
            }
          },
          "dependencies": [
            "azurerm_public_ip.publicIP3",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic4",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/5ccf6afd-ae4a-4305-8393-5b1b7b150dd6/resourceGroups/kubernetes/providers/Microsoft.Network/networkInterfaces/Worker2NIC",
            "internal_domain_name_suffix": "eipch5ripkfufautqteuqutbyg.cwx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "config4",
                "primary": true,
                "private_ip_address": "10.0.0.13",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/5ccf6afd-ae4a-4305-8393-5b1b7b150dd6/resourceGroups/kubernetes/providers/Microsoft.Network/publicIPAddresses/vmip4",
                "subnet_id": "/subscriptions/5ccf6afd-ae4a-4305-8393-5b1b7b150dd6/resourceGroups/kubernetes/providers/Microsoft.Network/virtualNetworks/redkubernetes/subnets/subredkubernetes"
              }
            ],
            "location": "ukwest",
            "name": "Worker2NIC",
            "private_ip_address": "10.0.0.13",
            "private_ip_addresses": [
              "10.0.0.13"
            ],
            "resource_group_name": "kubernetes",
            "tags": {
              "environment": "CasoPractico2"
            }
          },
          "dependencies": [
            "azurerm_public_ip.publicIP4",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nsg1tonic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5ccf6afd-ae4a-4305-8393-5b1b7b150dd6/resourceGroups/kubernetes/providers/Microsoft.Network/networkInterfaces/MasterNIC|/subscriptions/5ccf6afd-ae4a-4305-8393-5b1b7b150dd6/resourceGroups/kubernetes/providers/Microsoft.Network/networkSecurityGroups/nsgmaster",
            "network_interface_id": "/subscriptions/5ccf6afd-ae4a-4305-8393-5b1b7b150dd6/resourceGroups/kubernetes/providers/Microsoft.Network/networkInterfaces/MasterNIC",
            "network_security_group_id": "/subscriptions/5ccf6afd-ae4a-4305-8393-5b1b7b150dd6/resourceGroups/kubernetes/providers/Microsoft.Network/networkSecurityGroups/nsgmaster"
          },
          "dependencies": [
            "azurerm_network_interface.nic1",
            "azurerm_network_security_group.nsgmaster",
            "azurerm_public_ip.publicIP1",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nsg2tonic2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5ccf6afd-ae4a-4305-8393-5b1b7b150dd6/resourceGroups/kubernetes/providers/Microsoft.Network/networkInterfaces/WorkerNIC|/subscriptions/5ccf6afd-ae4a-4305-8393-5b1b7b150dd6/resourceGroups/kubernetes/providers/Microsoft.Network/networkSecurityGroups/nsgworker",
            "network_interface_id": "/subscriptions/5ccf6afd-ae4a-4305-8393-5b1b7b150dd6/resourceGroups/kubernetes/providers/Microsoft.Network/networkInterfaces/WorkerNIC",
            "network_security_group_id": "/subscriptions/5ccf6afd-ae4a-4305-8393-5b1b7b150dd6/resourceGroups/kubernetes/providers/Microsoft.Network/networkSecurityGroups/nsgworker"
          },
          "dependencies": [
            "azurerm_network_interface.nic2",
            "azurerm_network_security_group.nsgworker",
            "azurerm_public_ip.publicIP2",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nsg3tonic3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5ccf6afd-ae4a-4305-8393-5b1b7b150dd6/resourceGroups/kubernetes/providers/Microsoft.Network/networkInterfaces/NFSNIC|/subscriptions/5ccf6afd-ae4a-4305-8393-5b1b7b150dd6/resourceGroups/kubernetes/providers/Microsoft.Network/networkSecurityGroups/nsgnfs",
            "network_interface_id": "/subscriptions/5ccf6afd-ae4a-4305-8393-5b1b7b150dd6/resourceGroups/kubernetes/providers/Microsoft.Network/networkInterfaces/NFSNIC",
            "network_security_group_id": "/subscriptions/5ccf6afd-ae4a-4305-8393-5b1b7b150dd6/resourceGroups/kubernetes/providers/Microsoft.Network/networkSecurityGroups/nsgnfs"
          },
          "dependencies": [
            "azurerm_network_interface.nic3",
            "azurerm_network_security_group.nsgnfs",
            "azurerm_public_ip.publicIP3",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nsg4tonic4",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5ccf6afd-ae4a-4305-8393-5b1b7b150dd6/resourceGroups/kubernetes/providers/Microsoft.Network/networkInterfaces/Worker2NIC|/subscriptions/5ccf6afd-ae4a-4305-8393-5b1b7b150dd6/resourceGroups/kubernetes/providers/Microsoft.Network/networkSecurityGroups/nsgworker",
            "network_interface_id": "/subscriptions/5ccf6afd-ae4a-4305-8393-5b1b7b150dd6/resourceGroups/kubernetes/providers/Microsoft.Network/networkInterfaces/Worker2NIC",
            "network_security_group_id": "/subscriptions/5ccf6afd-ae4a-4305-8393-5b1b7b150dd6/resourceGroups/kubernetes/providers/Microsoft.Network/networkSecurityGroups/nsgworker"
          },
          "dependencies": [
            "azurerm_network_interface.nic4",
            "azurerm_network_security_group.nsgworker",
            "azurerm_public_ip.publicIP4",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsgmaster",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5ccf6afd-ae4a-4305-8393-5b1b7b150dd6/resourceGroups/kubernetes/providers/Microsoft.Network/networkSecurityGroups/nsgmaster",
            "location": "ukwest",
            "name": "nsgmaster",
            "resource_group_name": "kubernetes",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8080",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP8080",
                "priority": 1003,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "CasoPractico2"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsgnfs",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5ccf6afd-ae4a-4305-8393-5b1b7b150dd6/resourceGroups/kubernetes/providers/Microsoft.Network/networkSecurityGroups/nsgnfs",
            "location": "ukwest",
            "name": "nsgnfs",
            "resource_group_name": "kubernetes",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsgworker",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5ccf6afd-ae4a-4305-8393-5b1b7b150dd6/resourceGroups/kubernetes/providers/Microsoft.Network/networkSecurityGroups/nsgworker",
            "location": "ukwest",
            "name": "nsgworker",
            "resource_group_name": "kubernetes",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "publicIP1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/5ccf6afd-ae4a-4305-8393-5b1b7b150dd6/resourceGroups/kubernetes/providers/Microsoft.Network/publicIPAddresses/vmip1",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "ukwest",
            "name": "vmip1",
            "resource_group_name": "kubernetes",
            "sku": "Basic",
            "tags": {
              "environment": "CasoPractico2"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "publicIP2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/5ccf6afd-ae4a-4305-8393-5b1b7b150dd6/resourceGroups/kubernetes/providers/Microsoft.Network/publicIPAddresses/vmip2",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "ukwest",
            "name": "vmip2",
            "resource_group_name": "kubernetes",
            "sku": "Basic",
            "tags": {
              "environment": "CasoPractico2"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "publicIP3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/5ccf6afd-ae4a-4305-8393-5b1b7b150dd6/resourceGroups/kubernetes/providers/Microsoft.Network/publicIPAddresses/vmip3",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "ukwest",
            "name": "vmip3",
            "resource_group_name": "kubernetes",
            "sku": "Basic",
            "tags": {
              "environment": "CasoPractico2"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "publicIP4",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/5ccf6afd-ae4a-4305-8393-5b1b7b150dd6/resourceGroups/kubernetes/providers/Microsoft.Network/publicIPAddresses/vmip4",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "ukwest",
            "name": "vmip4",
            "resource_group_name": "kubernetes",
            "sku": "Basic",
            "tags": {
              "environment": "CasoPractico2"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.0/24",
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/5ccf6afd-ae4a-4305-8393-5b1b7b150dd6/resourceGroups/kubernetes/providers/Microsoft.Network/virtualNetworks/redkubernetes/subnets/subredkubernetes",
            "name": "subredkubernetes",
            "resource_group_name": "kubernetes",
            "virtual_network_name": "redkubernetes"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/24"
            ],
            "guid": "fe231e22-7a28-428b-8293-84c9485261c6",
            "id": "/subscriptions/5ccf6afd-ae4a-4305-8393-5b1b7b150dd6/resourceGroups/kubernetes/providers/Microsoft.Network/virtualNetworks/redkubernetes",
            "location": "ukwest",
            "name": "redkubernetes",
            "resource_group_name": "kubernetes",
            "tags": {
              "environment": "CasoPractico2"
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}